# srm-drive-monitor

./: .gitignore  CMakeLists.txt  README.html  README.md  evd-monitor-qml.kdev4  org.flatpak.srm-drive-monitor.yml  qtquickcontrols2.conf  resources.qrc  srm-drive-monitor.kdev4  srm-drive-monitor.pro
.kdev4/: evd-monitor-qml.kdev4  srm-drive-monitor.kdev4
qml/: AppMenuBar.qml  AppMenuBar2.qml  AppStatusBar.qml  AppToolBar.qml  BasicDataTable.qml  BasicDataTableOnListView.qml  BasicDataTable_v11.qml  BasicDataTable_v15.qml  CanDataWidget.qml  Charts.qml  ChartsWidget.qml  ControlAndConfiguration.qml  ControlAndConfigurationWidget.qml  ControlTabView.qml  DataAndCharts.qml  DriveConfigControl.qml  DriveConfigurationTool.qml  DriveConfigurationWidget.qml  InfoWidget.qml  MainTabView.qml  MainWidget.qml  SliderAndTextInput.qml  SpinboxAndSliderControl.qml  WatchSettingsWindow.qml  main.qml
qml/components/: BasicDataTableOnListView.qml  CanDataTable.qml  DataTableOnListView2Col.qml  FaultsTable.qml  SettingsCheckboxInput.qml  SettingsTextInput.qml  SliderAndTextInput.qml
qml/settings/: ChartsSettings.qml  MainSettingsWindow.qml  WatchSettingsWindow.qml
release/: README.html  srm-drive-monitor
release/demo/: README.html  srm-drive-monitor
release/full/: srm-drive-monitor
release/srm-drive-monitor/: README.html  srm-drive-monitor  srm-drive-monitor.desktop
scripts/: connect_can.sh  connect_can250.sh  connect_can_edge.sh  connect_vcan.sh
src/: CMakeLists.txt  main.cpp
src/appsettings/: appsettings.cpp  appsettings.h
src/canbusdevice/: canbusdevice.cpp  canbusdevice.h
src/canbusdevice_DEPRECATED/: canbusdevice.h
src/cansocketdevice/: cansocketdevice.cpp  cansocketdevice.h
src/chartplotter/: chartplotter.cpp  chartplotter.h
src/drive/: CMakeLists.txt
src/drive/candataprinter/: candataprinter.cpp  candataprinter.h
src/drive/candataprocessor/: candataprocessor.cpp  candataprocessor.h
src/drive/configeditor/: configeditor.cpp  configeditor.h
src/drive/drivecontroller/: drivecontroller.cpp  drivecontroller.h
src/drive/syslog/: syslog.cpp  syslog.h
src/mcoclient/: CMakeLists.txt  mcoclient.cpp  mcoclient.h  mcodef.h  rpdodef.h  tpdodef.h
src/mcoclient/objectdictionary/: objectdictionary.cpp  objectdictionary.h
src/mcoclient/old/: rpdoservice.txt  sdoservice.txt
src/mcoclient/rpdoservice/: rpdoservice.cpp  rpdoservice.h
src/mcoclient/sdoservice/: sdoservice.cpp  sdoservice.h
src/mcoclient/tpdoservice/: tpdoservice.cpp  tpdoservice.h
src/models/: CMakeLists.txt
src/models/basicdatatable/: basicdatatable.cpp  basicdatatable.h  basicdatatablemodel.cpp  basicdatatablemodel.h
src/models/candatatable/: candatatable.cpp  candatatable.h  candatatablemodel.cpp  candatatablemodel.h
src/models/watchdatatablemodel/: watchdatatablemodel.cpp  watchdatatablemodel.h
src/qml/: AppMenuBar.qml  AppToolBar.qml  ControlTabView.qml  MainTabView.qml  main.qml
